--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.cloud.discovery.enabled=true
 server.port=8084
 spring.application.name=@project.name@
 spring.datasource.url=jdbc:h2:mem:user-db
+springdoc.show-login-endpoint=true
