--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -3,3 +3,11 @@ server.port=8084
 spring.application.name=@project.name@
 spring.datasource.url=jdbc:h2:mem:user-db
 springdoc.show-login-endpoint=true
+
+token.secret=1234
+
+#1*60*1000
+token.duration.access=60000
+
+#60*60*1000
+token.duration.refresh=3600000
